# egm-horeca-backend

./: .gitignore  README.md  alembic.ini  manage.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 01582c439a78_dsda.py  0be65637da3f_dsda.py  0cc648dd74fa_dsda.py  12b38632862c_dsda.py  130e664f9c6d_dsda.py  15b5b4d44069_dsda.py  1f86b59776cd_dsda.py  1fcb7cdda874_dsda.py  247e92b810b1_dsda.py  281164222fa0_dsda.py  31495baebde3_dsda.py  3769297142d0_dsda.py  39240b9f5377_dsda.py  39ae0134a323_dsda.py  3b87b8ad897d_dsda.py  3d7cf9cf7227_dsda.py  435edf186c2b_dsda.py  456168d8be14_dsda.py  47cf61189007_dsda.py  50efe399abd8_dsda.py  672a873b1521_dsda.py  6a0ba11f3381_dsda.py  73845605ee48_dsda.py  7517fb511b12_dsda.py  79d2591b4cb7_dsda.py  7eeabfc30abd_dsda.py  8330b043ce3e_dsda.py  87eb701ac61c_dsda.py  8e877331b75f_dsda.py  94af0035f227_dsda.py  95327ee9b475_dsda.py  98f9a449fea1_dsda.py  9b8ebc143055_featuretype_and_feature.py  9dd85959dc34_dsda.py  a1b9f2ee898e_dsda.py  (+23 more)
app/: main.py
backend/: settings.py  urls.py
banners/: admin.py  models.py  serializers.py  signals.py  views.py
categories/: admin.py  models.py  serializers.py  signals.py  views.py
contacts/: admin.py  models.py  serializers.py  views.py
egmhoreca-backend/: asgi.py  renderers.py  settings.py  urls.py  wsgi.py
legal/: admin.py  models.py  serializers.py  views.py
orders/: admin.py  models.py
payments/: views.py
products/: admin.py  models.py  serializers.py  signals.py  views.py
translations/: admin.py  models.py  serializers.py  views.py
(+121 files in other folders)
